<resources>
    //App
    <string name="app_name">FlowModoro</string>
    <string name="titulo">FLOWMODORO</string>

    //Inicio de sesión y Registro
    <string name="Login">INICIAR SESIÓN</string>
    <string name="Goto_Login">¿Ya tiene una cuenta? Inicie sesión</string>
    <string name="Register">REGISTRO</string>
    <string name="Goto_Register">¿No tienes cuenta? ¡Regístrate!</string>
    <string name="username">Introduzca el nombre de usuario:</string>
    <string name="username_hint">juan14</string>
    <string name="Nivel_Estudios">Indique el nivel de estudios que está cursando:</string>
    <string name="Nivel_hint">Ej: Ciclo superior</string>
    <string name="Centro_Estudios">Introduzca el centro en el que estudia:</string>
    <string name="Centro_hint">Ej: Universidad Politécnica</string>
    <string name="Go_to_TerminosyCondiciones">Acepto los términos y condiciones</string>

    <string name="email">Introduzca el correo:</string>
    <string name="email_confirmation">Confirme el correo:</string>
    <string name="email_hint">ejemplo@gmail.com</string>
    <string name="password">Introduzca la contraseña:</string>
    <string name="password_hint">*******</string>
    <string name="password_forgotten">¿Has olvidado tu contraseña?</string>
    <string name="Bienvenida">¡Bienvenido a Flowmodoro!</string>
    <string name="Google">Iniciar sesión con Google</string>
    <string name="Facebook">Facebook</string>

    //Recuperar Contraseña
    <string name="Recuperar_contrasena">Recuperar contraseña</string>
    <string name="Correo_recuperacion">Introduzca el correo:</string>
    <string name="Enviar_codigo">Recuperar Contraseña</string>

    //Terminos y condiciones
    <string name="TerminosyCondiciones">Términos y Condiciones de Uso de la Aplicación Móvil Flowmodoro</string>
    <string name="TerminoyCondicionesText1">La aplicación móvil Flowmodoro ("la aplicación") es propiedad de Flowmodoro LLC ("la compañía"). Al descargar, instalar y utilizar la aplicación, aceptas los siguientes términos y condiciones:</string>
    <string name="TerminoyCondicionesText2Titulo">1. Uso de la aplicación: </string>
    <string name="TerminoyCondicionesText2">La aplicación está diseñada para ayudar a los usuarios a mejorar su productividad y concentración utilizando la técnica de Pomodoro. La aplicación se proporciona tal como está y la compañía no garantiza que la aplicación sea adecuada para cualquier propósito particular o que funcione sin errores o interrupciones. </string>
    <string name="TerminoyCondicionesText3Titulo">2. Contenido de la aplicación:</string>
    <string name="TerminoyCondicionesText3">Todo el contenido de la aplicación, incluyendo texto, gráficos, imágenes, fotografías, sonidos, ilustraciones y software ("Contenido"), es propiedad de la compañía o de sus respectivos propietarios. El Contenido está protegido por las leyes de propiedad intelectual y otras leyes aplicables. No se permite la reproducción, distribución, publicación, modificación o venta del Contenido sin el consentimiento expreso de la compañía.</string>
    <string name="TerminoyCondicionesText4Titulo">3. Privacidad:</string>
    <string name="TerminoyCondicionesText4">La compañía respeta la privacidad de sus usuarios. La aplicación no recopila ni almacena información personal del usuario, excepto la información necesaria para el funcionamiento de la aplicación, como los ajustes de configuración del usuario.</string>
    <string name="TerminoyCondicionesText5Titulo">4. Uso del servicio:</string>
    <string name="TerminoyCondicionesText5">El usuario acepta utilizar la aplicación de manera responsable y legal, y se compromete a no utilizar la aplicación para fines ilícitos o inapropiados. El usuario acepta cumplir con todas las leyes y regulaciones aplicables al utilizar la aplicación.</string>
    <string name="TerminoyCondicionesText6Titulo">5. Responsabilidad:</string>
    <string name="TerminoyCondicionesText6">La compañía no se hace responsable de ningún daño directo, indirecto, incidental, especial o consecuente que surja del uso de la aplicación, incluyendo, entre otros, daños por pérdida de beneficios, interrupción de negocios, pérdida de información o cualquier otro tipo de pérdida</string>
    <string name="TerminoyCondicionesText7Titulo">6. Modificaciones:</string>
    <string name="TerminoyCondicionesText7">La compañía se reserva el derecho de modificar, suspender o interrumpir la aplicación o cualquier parte de ella en cualquier momento sin previo aviso.</string>
    <string name="TerminoyCondicionesText8Titulo">7. Acuerdo completo:</string>
    <string name="TerminoyCondicionesText8">Estos términos y condiciones constituyen el acuerdo completo entre el usuario y la compañía con respecto al uso de la aplicación. Cualquier modificación de estos términos y condiciones debe ser por escrito y firmada por ambas partes.</string>
    <string name="TerminoyCondicionesText9Titulo">8. Ley aplicable:</string>
    <string name="TerminoyCondicionesText9">Estos términos y condiciones se regirán e interpretarán de acuerdo con las leyes del gobierno de España, sin tener en cuenta sus disposiciones de conflicto de leyes.</string>
    <string name="TerminoyCondicionesText10">Si tienes alguna pregunta o inquietud sobre estos términos y condiciones, por favor contáctanos a través de nuestro correo: flowmodoroteam@gmail.com.</string>
    <string name="AceptarTerminos">Volver al registro</string>

    //Estadisticas
    <string name="EstadísticasTitulo">Estadísticas</string>
    <string name="ConsulteEstadisticas">En esta pestaña podrás consultar los datos sobre tus sesiones de estudio en unas gráficas que te mostrarán tu rendimiento académico a lo largo de la semana</string>
    <string name="Concentracion">Concentración semanal</string>
    <string name="BotonConcentracion">Concentracion</string>
    <string name="Productividad">Productividad semanal</string>
    <string name="BotonProductividad">Productividad</string>


</resources>