<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blancoFlow"
    android:orientation="vertical"
    tools:context=".Terminos">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/ajustesLayout"
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:background="@color/cremaFlow"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:background="@color/cremaFlow"
            android:scaleType="fitCenter"
            android:src="@drawable/logo"
            app:layout_scrollFlags="scroll|enterAlways" />

    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/comicneue_bold"
                android:text="@string/TerminosyCondiciones"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/marronFlow"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/TerminoyCondicionesText1"
                    android:textColor="@color/marronFlow"
                    android:justificationMode="inter_word"></TextView>

                <TextView
                    android:id="@+id/TerminoyCondicionesText2Titulo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/TerminoyCondicionesText2Titulo"
                    android:textColor="@color/marronFlow"
                    android:justificationMode="inter_word"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/TerminoyCondicionesText2"
                    android:textColor="@color/marronFlow"
                    android:justificationMode="inter_word"></TextView>

                <TextView
                    android:id="@+id/TerminoyCondicionesText3Titulo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/TerminoyCondicionesText3Titulo"
                    android:textColor="@color/marronFlow"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/TerminoyCondicionesText3"
                    android:textColor="@color/marronFlow"
                    android:justificationMode="inter_word"></TextView>

                <TextView
                    android:id="@+id/TerminoyCondicionesText4itulo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/TerminoyCondicionesText4Titulo"
                    android:textColor="@color/marronFlow"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/TerminoyCondicionesText4"
                    android:textColor="@color/marronFlow"
                    android:justificationMode="inter_word"></TextView>

                <TextView
                    android:id="@+id/TerminoyCondicionesText5itulo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/TerminoyCondicionesText5Titulo"
                    android:textColor="@color/marronFlow"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/TerminoyCondicionesText5"
                    android:textColor="@color/marronFlow"
                    android:justificationMode="inter_word"></TextView>

                <TextView
                    android:id="@+id/TerminoyCondicionesText6itulo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/TerminoyCondicionesText6Titulo"
                    android:textColor="@color/marronFlow"
                    android:justificationMode="inter_word"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/TerminoyCondicionesText6"
                    android:textColor="@color/marronFlow"
                    android:justificationMode="inter_word"></TextView>

                <TextView
                    android:id="@+id/TerminoyCondicionesText7Titulo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/TerminoyCondicionesText7Titulo"
                    android:textColor="@color/marronFlow"
                    android:justificationMode="inter_word"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/TerminoyCondicionesText7"
                    android:textColor="@color/marronFlow"
                    android:justificationMode="inter_word"></TextView>

                <TextView
                    android:id="@+id/TerminoyCondicionesText8Titulo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/TerminoyCondicionesText8Titulo"
                    android:textColor="@color/marronFlow"
                    android:justificationMode="inter_word"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/TerminoyCondicionesText8"
                    android:textColor="@color/marronFlow"
                    android:justificationMode="inter_word"></TextView>

                <TextView
                    android:id="@+id/TerminoyCondicionesText9Titulo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/TerminoyCondicionesText9Titulo"
                    android:textColor="@color/marronFlow"
                    android:justificationMode="inter_word"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/TerminoyCondicionesText9"
                    android:textColor="@color/marronFlow"
                    android:justificationMode="inter_word"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:text="@string/TerminoyCondicionesText10"
                    android:textColor="@color/marronFlow"
                    android:justificationMode="inter_word"
                    ></TextView>

            </LinearLayout>

            <Button
                android:id="@+id/boton_Terminos_Condiciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:textSize="16dp"
                android:background="@color/cremaFlow"
                android:text="@string/AceptarTerminos"
                android:fontFamily="@font/comicneue_bold"
                android:padding="12dp"
                android:elevation="15dp"
                android:radius="20dp"/>



        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>