<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blancoFlow"
    tools:context=".LoginActivity"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/ajustesLayout"
        android:layout_width="match_parent"
        android:layout_height="99dp"
        android:background="@color/cremaFlow"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:background="@color/cremaFlow"
            android:scaleType="fitCenter"
            android:src="@drawable/logo"
            app:layout_scrollFlags="scroll|enterAlways" />

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:layout_gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/comicneue_bold"
            android:text="@string/Bienvenida"
            android:textColor="@color/marronFlow"
            android:textSize="30dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/email"
                android:textColor="@color/marronFlow"></TextView>

            <EditText
                android:id="@+id/correo_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:text="@string/password"
                android:textColor="@color/marronFlow"></TextView>

            <EditText
                android:id="@+id/contraseña_login"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:id="@+id/boton_inicio_sesion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textSize="16dp"
            android:background="@color/cremaFlow"
            android:text="@string/Login"
            android:fontFamily="@font/comicneue_bold"
            android:padding="14dp"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/boton_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/cremaFlow"
            android:layout_gravity="center"
            android:text="@string/Google"
            android:textAlignment="center"
            android:textSize="16dp"
            android:padding="14dp"
            android:fontFamily="@font/comicneue_bold"
            android:layout_marginTop="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/go_to_registro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/Goto_Register"
                android:textColor="@color/marronFlow"
                android:textSize="16dp"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:id="@+id/go_to_recuperar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/password_forgotten"
                android:textAlignment="textEnd"
                android:textColor="@color/marronFlow"
                android:textSize="16dp"
android:layout_marginRight="10dp"
                />

        </LinearLayout>


        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:text="Una aplicación del equipo MELIUS"
            android:textAlignment="center" />


    </LinearLayout>

</LinearLayout>